--- a/base/style/style.css
+++ b/base/style/style.css
@@ -62,7 +62,7 @@ text-decoration: none;
 
 #welcome span
 {
-    color: #D2691E;
+    color: #89D21E;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
 }
 
@@ -185,7 +185,7 @@ text-decoration: none;
 
 #description span
 {
-    color: #D2691E;
+    color: #89D21E;
     text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
 }
 
